// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadResult() extracts benchmark output from customBiggerIsBetter_output.json 1`] = `
{
  "benches": [
    {
      "extra": undefined,
      "name": "My Custom Bigger Is Better Benchmark - Throughput",
      "platform": undefined,
      "range": undefined,
      "unit": "req/s",
      "value": 70,
    },
    {
      "extra": "Optional Value #1: 25
Helpful Num #2: 100
Anything Else!",
      "name": "My Custom Bigger Is Better Benchmark - Free Memory",
      "platform": undefined,
      "range": "3",
      "unit": "Megabytes",
      "value": 150,
    },
  ],
  "bigger_is_better": undefined,
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
}
`;

exports[`loadResult() extracts benchmark output from customSmallerIsBetter_output.json 1`] = `
{
  "benches": [
    {
      "extra": "My Optional Information for the tooltip",
      "name": "My Custom Smaller Is Better Benchmark - CPU Load",
      "platform": undefined,
      "range": "5%",
      "unit": "Percent",
      "value": 50,
    },
    {
      "extra": undefined,
      "name": "My Custom Smaller Is Better Benchmark - Memory Used",
      "platform": undefined,
      "range": undefined,
      "unit": "Megabytes",
      "value": 100,
    },
  ],
  "bigger_is_better": undefined,
  "commit": {
    "author": null,
    "committer": null,
    "id": "123456789abcdef",
    "message": "this is dummy",
    "timestamp": "dummy timestamp",
    "url": "https://github.com/dummy/repo",
  },
  "date": 1712131503296,
}
`;
